Filter and sorting functionality in place on Stories page. Some bug fixes and styling changes.

--- a/style/Filter.css
+++ b/style/Filter.css
@@ -24,12 +24,12 @@
 }
 
 .filter button, .filter select{
-    border: solid;
+    border: none !important;
     border-radius: 150px;
     border-color: #004e74;
     
-    font-size: .7em;
-    text-align: center;
+    font-size: .75em;
+    text-align: left;
     
     background-color: #004e74;
     color: white;
@@ -42,7 +42,15 @@
     position: relative;
     z-index: 1;
 }
-#WrittenLanguageFilter, #SortByFilter{
+.filter .custom-select-options{
+  /* padding: 0px; */
+}
+.filter .custom-select-options button{
+  border: none !important;
+  padding-top: 1px;
+  border-radius: 0px;
+}
+#written-language-select, #sort-by-select{
   margin-left: 3%;
 }
 .filter #options{
@@ -71,39 +79,47 @@
     height: 30px;
     width: 45px;
     margin-left: -15px;
-    bottom: 9px;
+    bottom: 7px;
     position: relative;
     float: left;
     vertical-align: middle;
 }
-
-@media (min-width:900px) {
+@media (min-width:950px) {
   .filter button, .filter select{
-      font-size: .8em;
+      font-size: 1em;
       padding-top: 5%;
+      text-align: left;
   }
   .filter button img, .filter select img{
-      bottom: 10px;
+      bottom: 7px;
       height: 36px;
       width: 54px;
   }
 }
 @media (min-width:1050px) {
   .filter button, .filter select{
-      font-size: 1em;
+      font-size: .9em;
       padding-top: 3.5%;
+      text-align: center;
   }
   .filter button img, .filter select img{
-      bottom: 8px;
+      bottom: 5px;
   }
 }
-@media (min-width:1200px) {
+@media (min-width:1100px) {
+  .filter button, .filter select{
+      font-size: 1em;
+      text-align: center;
+  }
+}
+@media (min-width:1250px) {
   .filter button, .filter select{
       font-size: 1.3em;
       padding-top: 2%;
+      text-align: center;
   }
   .filter button img, .filter select img{
-      bottom: 4px;
+      bottom: 2px;
   }
 }
 .filter button img.dropdownIcon, .filter select img.dropdownIcon
@@ -128,6 +144,7 @@
 {
     cursor: pointer;
     border-color: white;
+    font-weight: bold;
 }
 
 #options
