--- a/style/Editor.css
+++ b/style/Editor.css
@@ -89,7 +89,7 @@ body.dragging{
 	display: none;
 }
 
-#editor-content .modal{
+.editor-content-wrapper .modal{
 	position: absolute;
 	top: 0px;
 	left: 0px;
@@ -97,7 +97,7 @@ body.dragging{
 	width: 100%;
 	background: rgba(0, 0, 0, .5);
 }
-#editor-content .add-text-button, #editor-content .add-page-button{
+.editor-content-wrapper .add-text-button, .editor-content-wrapper .add-page-button{
 	position: relative;
 	width: 100%;
     padding: 5px 40px;
@@ -114,22 +114,22 @@ body.dragging{
 	line-height: .5em;
 	text-align: center;
 }
-#editor-content .add-text-button{
+.editor-content-wrapper .add-text-button{
 	height: 30px;
 	background-image: url(../img/icons/General/icon_Add_LtBlue.svg);
 	background-size:  20px;
 	background-position: center center;
 }
-#editor-content .add-text-button:hover{
+.editor-content-wrapper .add-text-button:hover{
 	background-image: url(../img/icons/General/icon_Add_DkBlue.svg);
 }
-#editor-content .add-page-button{
+.editor-content-wrapper .add-page-button{
 	padding: 5px;
 	font-size: 1.5em;
 	line-height: 1em;
 	clear: right;
 }
-#editor-content .add-text-button:hover, #editor-content .add-page-button:hover{
+.editor-content-wrapper .add-text-button:hover, .editor-content-wrapper .add-page-button:hover{
     color: #004D75;
 	border-color: #004D75;
 }
