--- a/style/PlantGame.css
+++ b/style/PlantGame.css
@@ -1,8 +1,20 @@
 #videos{
     width: 100%;
-    height: calc(30% - 100px);
+    height: calc(35% - 100px);
+    background-color: green;
 }
 #hintBtnContainer{
     width: 100%;
     height: calc(10% - 100px);
+    background-color: blue;
+}
+#sentence{
+    width: 100%;
+    height: calc(35% - 100px);
+    background-color: yellow;
+}
+#flowerBed{
+    width: 100%;
+    height: calc(20% - 100px);
+    background-color: red;
 }
