--- a/style/PlantGame.css
+++ b/style/PlantGame.css
@@ -1,20 +1,111 @@
-#videos{
+/* Hiding old header */
+header #language-selector,
+header #logo-wrapper,
+header nav {
+    display: none;
+}
+
+header {
+    border: none;
+
     width: 100%;
-    height: calc(35% - 100px);
+    height: 75px;
+    background-color: transparent;
+
+
+}
+
+.title span {
+    width: 100%;
+    height: 260px;
+    padding-top: 100px;
+    text-align: center;
+    display: block;
+    font-size: 120px;
+    
+    color: #0098ba;
+    font-family: "Arial Rounded MT Bold";
+    font-weight: bolder;
+}
+
+@media only screen and (max-width: 600px) {
+    .title span {
+        font-size: 80px;
+    }
+
+
+}
+
+footer {
+    display: none;
+}
+
+/* new header */
+header button {
+    height: 100px;
+    width: 100px;
+
+    float: right;
+    
+    background-color: transparent;
+    border: none;
+    
+    background-image: url(../img/games/BusGame/Menu/backarrowframe.png);
+    background-size: 100% 100%;
+    
+    font-family: "Arial Rounded MT Bold";
+
+}
+
+header button img {
+    height: auto;
+    width: 70%;
+}
+
+header #backBtn img {
+    position: relative;
+    top: -7px;
+    left: 5px;
+}
+
+
+#videos{
+    top: 75px;
+    display: block;
+    width: 100%;
+    height: calc(35%);
     background-color: green;
 }
+#videos video{
+    width: 30%;
+    height: auto;
+}
+#videoContainer{
+     width: 80%;
+    height: 100%;
+}
 #hintBtnContainer{
+    
     width: 100%;
-    height: calc(10% - 100px);
+    height: calc(10%);
     background-color: blue;
+    align-items: center;
+    justify-content: center;
+}
+#hintBtnContainer button{
+    display: flex;
+    justify-content: center;
+    
 }
 #sentence{
+ 
     width: 100%;
-    height: calc(35% - 100px);
+    height: calc(35%);
     background-color: yellow;
 }
 #flowerBed{
+    
     width: 100%;
-    height: calc(20% - 100px);
+    height: calc(20%);
     background-color: red;
 }
