--- a/style/LanguageSelector.css
+++ b/style/LanguageSelector.css
@@ -4,12 +4,14 @@
 	height: 35px;
 	width: 200px;
 	font-size: 1.1em;
-	padding: 5px 25px;
+	padding: 5px;
+	padding-left: 40px;
 	text-align: center;
 	border: none;
 	border-bottom-left-radius: 15px;
-	border-bottom-right-radius: 15px;
+
 	-webkit-appearance: none;
+
 	text-align-last:center;
 	-ms-text-align-last: center;
 	-moz-text-align-last: center;
