--- a/style/PlantGame.css
+++ b/style/PlantGame.css
@@ -73,7 +73,7 @@ header #backBtn img {
     top: 75px;
     display: block;
     width: 100%;
-    height: calc(35%);
+   
     background-color: green;
     vertical-align: middle;
    
@@ -81,15 +81,22 @@ header #backBtn img {
 #videos video{
   width: 32%;
     height: auto;
+    padding-left: 3%;
+    padding-top: 1.5%;
+    padding-bottom: 1.5%;
+    text-align: center;
+    	margin: 0 auto;
+		
+    
 }
 #videos img{
     display: none;
 }
 #videoContainer{
    
-     width: 90%;
+     width: 100%;
     height: 100%;
-padding-left: 10%;
+
 }
 #videoOne{
       display: inline;
