--- a/style/PlantGame.css
+++ b/style/PlantGame.css
@@ -78,10 +78,10 @@ header #backBtn img {
     vertical-align: middle;
    
 }
-#videos video{
+#videos .media{
     width: 32%;
     height: auto;
-
+    display: inline-block;
     padding-left: 3%;
     padding-top: 1.5%;
     padding-bottom: 1.5%;
@@ -96,27 +96,18 @@ header #backBtn img {
 #videos img{
     display: none;
 }
+
+#videos video
+{
+    width: 100%;
+}
 #videoContainer{
    
      width: 100%;
     height: 100%;
 
 }
-#videoOne{
-      display: inline;
-    width: 30%;
-    height: auto;
-}
-#videoTwo{
-      display: inline;
-    width: 30%;
-    height: auto;
-}
-#videoThree{
-      display: inline;
-    width: 30%;
-    height: auto;
-}
+
 #hintBtnContainer{
     
     width: 100%;
@@ -172,6 +163,6 @@ header #backBtn img {
 
 .hidden
 {
-    opacity: 0;
+    display: none;
 }
 
