--- a/style/PlantGame.css
+++ b/style/PlantGame.css
@@ -60,8 +60,7 @@ main{
 
 .title span {
     width: 100%;
-    height: 260px;
-    padding-top: 100px;
+    padding: 50px 20px;;
     text-align: center;
     display: block;
     font-size: 120px;
