--- a/style/PlantGame.css
+++ b/style/PlantGame.css
@@ -275,6 +275,10 @@ header #responseText
     bottom: 0;
     width: 100%;
     height: calc(23%);
+   
+}
+footer{
+      z-index: -1;
 }
 
 #wall
@@ -283,6 +287,7 @@ header #responseText
     bottom: 0;
     width: 100%;
     height: auto;
+   
 }
 
 #flowers
